[gd_scene load_steps=21 format=3 uid="uid://d1qx6pu4eayp2"]

[ext_resource type="Script" uid="uid://cpv8f5kdccyej" path="res://betterbasket.gd" id="1_be4px"]
[ext_resource type="Texture2D" uid="uid://by7ainh8na04c" path="res://wicker-basket.png" id="1_exvoq"]
[ext_resource type="Texture2D" uid="uid://78nsp2tvr1u3" path="res://apple.png" id="2_b4su3"]
[ext_resource type="Script" uid="uid://ds11hxcefhskl" path="res://betterapple.gd" id="3_ef0tj"]
[ext_resource type="Script" uid="uid://blt22idvevcsg" path="res://goldenapple.gd" id="3_scsih"]
[ext_resource type="Texture2D" uid="uid://cs574ewwcc8he" path="res://icons8-minecraft-golden-apple-96.png" id="4_xxvis"]
[ext_resource type="AudioStream" uid="uid://do1vhw742nq7l" path="res://funky_chiptune.ogg" id="5_ef0tj"]
[ext_resource type="Texture2D" uid="uid://bqiedg1nyayid" path="res://favpng_a9fd9110c6a75084485040168848c7e7.png" id="6_scsih"]
[ext_resource type="Script" uid="uid://oahvo3umfr5a" path="res://hp_label.gd" id="7_xxvis"]
[ext_resource type="Script" uid="uid://bmawsyqao4exl" path="res://obstacle.gd" id="10_rmopt"]
[ext_resource type="Texture2D" uid="uid://bsdbe5qdxdjcx" path="res://0359dd78-47bd-434b-8e5a-66c6e8b09c38.png" id="10_ypymp"]
[ext_resource type="Texture2D" uid="uid://ydjrryoru213" path="res://snowflake.png" id="11_rmopt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_be4px"]
size = Vector2(36, 39)

[sub_resource type="CircleShape2D" id="CircleShape2D_sxw4r"]
radius = 25.019993

[sub_resource type="CircleShape2D" id="CircleShape2D_ef0tj"]
radius = 19.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ef0tj"]
size = Vector2(1155, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_scsih"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xxvis"]
radius = 1373.1049

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6k68e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ypymp"]
size = Vector2(58.5, 52)

[node name="Node2D" type="Node2D"]

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(599, 359)
texture = ExtResource("10_ypymp")

[node name="Basket" type="Area2D" parent="."]
position = Vector2(529, 627)
collision_mask = 15
script = ExtResource("1_be4px")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Basket"]
position = Vector2(-2.9999847, -3)
scale = Vector2(0.07031251, 0.07421876)
texture = ExtResource("1_exvoq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Basket"]
position = Vector2(-4, -3)
shape = SubResource("RectangleShape2D_be4px")

[node name="Timer" type="Timer" parent="Basket"]

[node name="goldenapple" type="CharacterBody2D" parent="."]
position = Vector2(590, 56)
collision_layer = 2
collision_mask = 3
script = ExtResource("3_scsih")

[node name="Sprite2D" type="Sprite2D" parent="goldenapple"]
position = Vector2(56.125015, -18.499998)
scale = Vector2(0.51822954, 0.5520834)
texture = ExtResource("4_xxvis")

[node name="CollisionShape2D" type="CollisionShape2D" parent="goldenapple"]
position = Vector2(56, -16)
shape = SubResource("CircleShape2D_sxw4r")

[node name="Apple" type="CharacterBody2D" parent="."]
position = Vector2(561, 55)
collision_layer = 4
script = ExtResource("3_ef0tj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Apple"]
shape = SubResource("CircleShape2D_ef0tj")

[node name="Sprite2D" type="Sprite2D" parent="Apple"]
position = Vector2(-0.50000477, -0.49999905)
scale = Vector2(0.07226567, 0.064453125)
texture = ExtResource("2_b4su3")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 859.0
offset_top = 13.0
offset_right = 1056.0
offset_bottom = 105.0
theme_override_font_sizes/font_size = 67
text = "Score: 0"
metadata/_edit_use_anchors_ = true

[node name="HPLabel" type="Label" parent="."]
offset_left = 89.0
offset_top = 21.0
offset_right = 348.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 60
text = "Health: 3"
script = ExtResource("7_xxvis")
metadata/_edit_use_anchors_ = true

[node name="Floor" type="Area2D" parent="."]
position = Vector2(518, 659)
collision_mask = 5
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(54.5, 0)
shape = SubResource("RectangleShape2D_ef0tj")

[node name="HPpower" type="Area2D" parent="."]
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HPpower"]
shape = SubResource("RectangleShape2D_scsih")

[node name="Sprite2D" type="Sprite2D" parent="HPpower"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 5)
stream = ExtResource("5_ef0tj")
autoplay = true

[node name="frozen apple" type="CharacterBody2D" parent="."]
position = Vector2(486.00003, 54)
scale = Vector2(0.0058953697, 0.005622368)

[node name="Sprite2D" type="Sprite2D" parent="frozen apple"]
position = Vector2(1, 5)
texture = ExtResource("6_scsih")

[node name="CollisionShape2D" type="CollisionShape2D" parent="frozen apple"]
position = Vector2(-81, 269)
shape = SubResource("CircleShape2D_xxvis")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_6k68e")

[node name="Obstacle" type="StaticBody2D" parent="."]
position = Vector2(1247, 208)
collision_layer = 8
script = ExtResource("10_rmopt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacle"]
position = Vector2(9.75, -7)
shape = SubResource("RectangleShape2D_ypymp")

[node name="Sprite2D" type="Sprite2D" parent="Obstacle"]
position = Vector2(9.749931, -6.749999)
scale = Vector2(0.110351294, 0.09863281)
texture = ExtResource("11_rmopt")

[node name="Timer" type="Timer" parent="Obstacle"]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="Basket" to="Basket" method="_on_body_entered"]
[connection signal="body_entered" from="Basket" to="goldenapple" method="_on_basket_body_entered"]
[connection signal="body_entered" from="Basket" to="Apple" method="_on_basket_body_entered"]
[connection signal="body_exited" from="Basket" to="Basket" method="_on_body_exited"]
[connection signal="timeout" from="Basket/Timer" to="Basket" method="_on_timer_timeout"]
[connection signal="body_entered" from="Floor" to="Apple" method="_on_floor_body_entered"]
[connection signal="timeout" from="Obstacle/Timer" to="Obstacle" method="_on_timer_timeout"]
